--- a/RPG.html
+++ b/RPG.html
@@ -24,7 +24,7 @@
             <br>
             <div class="Display">
                 <input id="display" type="text" placeholder="GENERATE A PASSWORD" readonly/>
-                <button id="copyBtn" onclick="CopyPass()"><i class="fa fa-clipboard"></i></button>
+                <button id="copyBtn" onclick="CopyPassMain()"><i class="fa fa-clipboard"></i></button>
                 <br>
                 <button id="resetBtn" onclick="ClearPass()"><i class="fas fa-broom"></i></button>
             </div>
@@ -34,7 +34,7 @@
                 <input class="inputRange" type="range" min="4" max="30" value="8" step="1" oninput="showAmount(this.value)"/>
                 
             </div>
-
+            
             <br>
             <div class="options">
                 <p class="Option-select">&emsp;&emsp;<u>SELECT :</u></p>
@@ -76,6 +76,44 @@
                 <i class="fa fa-refresh fa-spin"></i>
             </button>
             <br><br>
+        </div>
+
+        <div class="mostrecent-list">
+            <h2>Most-recent Passwords</h2>
+            <br>
+            <div class="Fpass">
+                    <input id="Fpass1" type="text" placeholder="N/A" readonly/>
+                    <button id="MRcopyBtn1" onclick="CopyPassMR1()"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn1" onclick="RemovePassMR1()"><i class="fa fa-trash"></i></button>
+            </div>
+
+            <br><br><br>
+            <div class="Fpass">
+                    <input id="Fpass2" type="text" placeholder="N/A" readonly/>
+                    <button id="MRcopyBtn2" onclick="CopyPassMR2()"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn2" onclick="RemovePassMR2()"><i class="fa fa-trash"></i></button>
+            </div>
+
+            <br><br><br>
+            <div class="Fpass">
+                    <input id="Fpass3" type="text" placeholder="N/A" readonly/>
+                    <button id="MRcopyBtn3" onclick="CopyPassMR3()"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn3" onclick="RemovePassMR3()"><i class="fa fa-trash"></i></button>
+            </div>
+
+            <br><br><br>
+            <div class="Fpass">
+                    <input id="Fpass4" type="text" placeholder="N/A" readonly/>
+                    <button id="MRcopyBtn4" onclick="CopyPassMR4()"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn4" onclick="RemovePassMR4()"><i class="fa fa-trash"></i></button>
+            </div>
+
+            <br><br><br>
+            <div class="Fpass">
+                    <input id="Fpass5" type="text" placeholder="N/A" readonly/>
+                    <button id="MRcopyBtn5" onclick="CopyPassMR5()"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn5" onclick="RemovePassMR5()"><i class="fa fa-trash"></i></button>
+            </div>
         </div>
     </body>
 </html>
