Check your password's strength {added}

--- a/RPG.html
+++ b/RPG.html
@@ -117,9 +117,9 @@
         </div>
 
         <div class="ApplyPass">
-            <h3>Check your password's strenght</h3>
+            <h3>Check your password's strength</h3>
             <br><br>
-            <input id="AppliedPass" type="text" placeholder="N/A" readonly>
+            <input id="AppliedPass" type="text" placeholder="Apply your code here" readonly>
             <button id="AppliedPassBtn" onclick="PastePass()"><i class="fa fa-paste"></i></button>
             <button id="DeletePastedPassBtn" onclick="RemovePastedPass()"><i class="fa fa-trash"></i></button>
             <div id="PasswordStrength" class="password-strength"></div>
