Most-recent list {Updated/Optimized}

--- a/RPG.html
+++ b/RPG.html
@@ -83,36 +83,36 @@
             <br>
             <div class="Fpass">
                     <input id="Fpass1" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn1" onclick="CopyPassMR1()"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn1" onclick="RemovePassMR1()"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn1" onclick="CopyPassMR('Fpass1')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn1" onclick="RemovePassMR(1)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass2" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn2" onclick="CopyPassMR2()"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn2" onclick="RemovePassMR2()"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn2" onclick="CopyPassMR('Fpass2')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn2" onclick="RemovePassMR(2)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass3" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn3" onclick="CopyPassMR3()"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn3" onclick="RemovePassMR3()"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn3" onclick="CopyPassMR('Fpass3')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn3" onclick="RemovePassMR(3)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass4" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn4" onclick="CopyPassMR4()"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn4" onclick="RemovePassMR4()"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn4" onclick="CopyPassMR('Fpass4')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn4" onclick="RemovePassMR(4)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass5" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn5" onclick="CopyPassMR5()"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn5" onclick="RemovePassMR5()"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn5" onclick="CopyPassMR('Fpass5')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn5" onclick="RemovePassMR(5)"><i class="fa fa-trash"></i></button>
             </div>
         </div>
 
