--- a/src/RPG.html
+++ b/src/RPG.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="RPGstyle.css">
-    <link rel="icon" href="../xRPGfavicon.jpg">
+    <link rel="icon" href="../RPGfavicon.jpg">
     <script type="text/javascript" src="RPGscript.js"></script>
 
     <head>
