--- a/src/RPG.html
+++ b/src/RPG.html
@@ -24,9 +24,9 @@
             <br>
             <div class="Display">
                 <input id="display" type="text" placeholder="GENERATE A PASSWORD" readonly/>
-                <button id="copyBtn" onclick="CopyPassMain()"><i class="fa fa-clipboard"></i></button>
+                <button id="copyBtn" onclick="CopyPass('display')"><i class="fa fa-clipboard"></i></button>
                 <br>
-                <button id="resetBtn" onclick="ClearPass()"><i class="fas fa-broom"></i></button>
+                <button id="resetBtn" onclick="RemovePass(0)"><i class="fas fa-broom"></i></button>
             </div>
 
             <div class="slider">
@@ -83,36 +83,36 @@
             <br>
             <div class="Fpass">
                     <input id="Fpass1" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn1" onclick="CopyPassMR('Fpass1')"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn1" onclick="RemovePassMR(1)"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn1" onclick="CopyPass('Fpass1')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn1" onclick="RemovePass(1)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass2" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn2" onclick="CopyPassMR('Fpass2')"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn2" onclick="RemovePassMR(2)"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn2" onclick="CopyPass('Fpass2')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn2" onclick="RemovePass(2)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass3" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn3" onclick="CopyPassMR('Fpass3')"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn3" onclick="RemovePassMR(3)"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn3" onclick="CopyPass('Fpass3')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn3" onclick="RemovePass(3)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass4" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn4" onclick="CopyPassMR('Fpass4')"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn4" onclick="RemovePassMR(4)"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn4" onclick="CopyPass('Fpass4')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn4" onclick="RemovePass(4)"><i class="fa fa-trash"></i></button>
             </div>
 
             <br><br><br>
             <div class="Fpass">
                     <input id="Fpass5" type="text" placeholder="N/A" readonly/>
-                    <button id="MRcopyBtn5" onclick="CopyPassMR('Fpass5')"><i class="fa fa-clipboard"></i></button>
-                    <button id="MRdeleteBtn5" onclick="RemovePassMR(5)"><i class="fa fa-trash"></i></button>
+                    <button id="MRcopyBtn5" onclick="CopyPass('Fpass5')"><i class="fa fa-clipboard"></i></button>
+                    <button id="MRdeleteBtn5" onclick="RemovePass(5)"><i class="fa fa-trash"></i></button>
             </div>
         </div>
 
