onload calling function to load LocalStorage {Added}

--- a/src/RPG.html
+++ b/src/RPG.html
@@ -15,7 +15,8 @@
 
     </head>
 
-    <body>
+    <!--onload forces the program to parse and assign the localStorage content to the most-recent passwords array-->
+    <body onload="loadRecentPasswords()">
 
         <div class="Container">
 
